--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,7 @@ Generate migrations and public
   r g fluxx_engine_locale
   r g fluxx_engine_public
   r g fluxx_crm_migration
-  r g fluxx_crm_migration
   r g fluxx_crm_public
   r g fluxx_grant_migration
+  r g fluxx_grant_public
 
