update readme, seeds and add missing migration

--- a/README.textile
+++ b/README.textile
@@ -7,5 +7,6 @@ Generate migrations and public
   r g fluxx_crm_public
   r g fluxx_grant_migration
   r g fluxx_grant_public
+  r g fluxx_grant_seed
 
 # Do this when creating a new project  r g devise:install
